<resources>
    <string name="app_name">Repeating Reminders</string>
    <string name="action_settings">Settings</string>
    <string name="reminder_title">Test Reminder</string>
    <string name="reminder_text" formatted="false">Reminder runs every hour from %s to %s. This is an extremely long string that could also have other details about the card or the reminder or the days that it runs.</string>
    <string name="edit_reminder_description">Edit Reminder</string>
    <string name="button_reminder_edit">edit</string>
    <string name="reminder_subtitle">Daily Reminder</string>
    <string name="button_reminder_enable">Enable</string>
    <string name="title_activity_settings">Settings</string>
</resources>
