<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reminder_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    card_view:cardCornerRadius="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:id="@+id/reminder_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:paddingTop="24dp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/reminder_title"/>

            <TextView
                android:id="@+id/reminder_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingTop="12dp"
                android:text="@string/reminder_subtitle"/>

            <TextView
                android:id="@+id/reminder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/reminder_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="end">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_reminder_enable"
                android:text="@string/button_reminder_enable"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorPrimaryText"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_reminder_edit"
                android:text="@string/button_reminder_edit"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>
    </LinearLayout>
   </android.support.v7.widget.CardView>